add only two rows slds

--- a/src/modules/example/app/app.html
+++ b/src/modules/example/app/app.html
@@ -1,7 +1,7 @@
 <template>
     <main>
         <section role="tabpanel" aria-expanded="true" class="tabs__content active uiTab" data-aura-rendered-by="2054:0"
-            data-aura-class="uiTab" id="2050:0"><!--render facet: 2058:0-->
+            data-aura-class="uiTab"><!--render facet: 2058:0-->
             <div data-component-id="force_detailPanel" data-target-selection-name="force_detailPanel"
                 data-aura-rendered-by="2059:0" class="flexipageComponent" data-aura-class="flexipageComponent">
                 <!--render facet: 2063:0--><!--render facet: 2065:0--><!--render facet: 2068:0--><!--render facet: 2069:0--><!--render facet: 2071:0--><!--render facet: 2073:0-->
@@ -183,6 +183,72 @@
                 </div>
             </div>
         </section>
+        <!-- another details pane -->
+        <section><!--render facet: 2058:0-->
+
+            <!--render facet: 2063:0--><!--render facet: 2065:0--><!--render facet: 2068:0--><!--render facet: 2069:0--><!--render facet: 2071:0--><!--render facet: 2073:0-->
+            <div class="slds-clearfix slds-card">
+                <article data-aura-rendered-by="2078:0"><!--render facet: 2079:0-->
+                    <div class="slds-section  slds-is-open">
+                        <div class="slds-section__content section__content slds-p-top--none">
+                            <div class="slds-form slds-form_stacked ">
+                                <div class="slds-grid slds-gutters_small">
+                                    <div class="slds-col slds-grid slds-has-flexi-truncate">
+                                        <div
+                                            class="slds-form-element slds-form-element_readonly slds-grow slds-hint-parent">
+                                            <div class="slds-form-element__label"><span>Product Name</span>
+                                            </div>
+                                            <div class="slds-form-element__control slds-grid"><span
+                                                    class="slds-form-element__static slds-grow"><span>Samsung</span></span><!--render facet: 19:2492;a--><!--render facet: 20:2492;a-->
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="slds-col slds-grid slds-has-flexi-truncate">
+                                        <div
+                                            class="slds-form-element slds-form-element_readonly slds-grow slds-hint-parent">
+                                            <div class="slds-form-element__label"><span>Active</span></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="test-id__section slds-section  slds-is-open full forcePageBlockSection forcePageBlockSectionView"
+                        data-aura-rendered-by="243:2492;a"
+                        data-aura-class="forcePageBlockSection forcePageBlockSectionView">
+                        <!--render facet: 244:2492;a-->
+                        <div class="test-id__section-content slds-section__content section__content slds-p-top--none"
+                            data-aura-rendered-by="245:2492;a" >
+                            <div class="slds-form slds-form_stacked " data-aura-rendered-by="246:2492;a">
+                                <div class="slds-grid slds-gutters_small full cols-1 forcePageBlockSectionRow"
+                                    data-aura-rendered-by="239:2492;a" data-aura-class="forcePageBlockSectionRow">
+                                    <div class="slds-col slds-grid slds-has-flexi-truncate  full long-text forcePageBlockItem forcePageBlockItemView"
+                                        data-aura-rendered-by="226:2492;a"
+                                        data-aura-class="forcePageBlockItem forcePageBlockItemView">
+                                        <div class="slds-form-element slds-form-element_readonly slds-grow slds-hint-parent override--slds-form-element"
+                                            data-aura-rendered-by="227:2492;a">
+                                            <div class="test-id__field-label-container slds-form-element__label"
+                                                data-aura-rendered-by="228:2492;a"><span class="test-id__field-label"
+                                                    data-aura-rendered-by="229:2492;a">Product
+                                                    Description</span></div>
+                                            <div class="slds-form-element__control slds-grid itemBody"
+                                                data-aura-rendered-by="231:2492;a"><span
+                                                    class="test-id__field-value slds-form-element__static slds-grow  is-read-only"
+                                                    data-aura-rendered-by="232:2492;a"><span
+                                                        data-aura-rendered-by="222:2492;a" class="uiOutputTextArea"
+                                                        data-aura-class="uiOutputTextArea">The samsung
+                                                        phone run android and works on battery</span></span><!--render facet: 234:2492;a--><!--render facet: 235:2492;a-->
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+            </div>
+
+        </section>
         <div>{hello}</div>
 
         <!-- another ironman -->
@@ -197,95 +263,7 @@
                     <span class="slds-truncate" title="Section Title">Section Title</span>
                 </button>
             </h3>
-            <div class="test-id__section slds-section  slds-is-open full forcePageBlockSection forcePageBlockSectionView"
-                data-aura-rendered-by="86:760;a" data-aura-class="forcePageBlockSection forcePageBlockSectionView">
-                <!--render facet: 87:760;a-->
-                <div class="test-id__section-content slds-section__content section__content slds-p-top--none"
-                    data-aura-rendered-by="88:760;a" id="4:760;a">
-                    <div class="slds-form slds-form_stacked " data-aura-rendered-by="89:760;a">
-                        <div class="slds-grid slds-gutters_small full cols-2 forcePageBlockSectionRow"
-                            data-aura-rendered-by="42:760;a" data-aura-class="forcePageBlockSectionRow">
-                            <div data-target-selection-name="sfdc:RecordField.Product2.Name"
-                                class="slds-col slds-grid slds-has-flexi-truncate  full forcePageBlockItem forcePageBlockItemView"
-                                data-aura-rendered-by="11:760;a"
-                                data-aura-class="forcePageBlockItem forcePageBlockItemView">
-                                <div class="slds-form-element slds-form-element_readonly slds-grow slds-hint-parent override--slds-form-element"
-                                    data-aura-rendered-by="12:760;a">
-                                    <div class="test-id__field-label-container slds-form-element__label"
-                                        data-aura-rendered-by="13:760;a"><span class="test-id__field-label"
-                                            data-aura-rendered-by="14:760;a">Product Name</span></div>
-                                    <div class="slds-form-element__control slds-grid itemBody"
-                                        data-aura-rendered-by="16:760;a"><span
-                                            class="test-id__field-value slds-form-element__static slds-grow  is-read-only"
-                                            data-aura-rendered-by="17:760;a"><span data-aura-rendered-by="9:760;a"
-                                                class="uiOutputText" data-aura-class="uiOutputText">Samsung
-                                                Galaxy</span></span><!--render facet: 19:760;a--><!--render facet: 20:760;a-->
-                                    </div>
-                                </div>
-                            </div>
-                            <div data-target-selection-name="sfdc:RecordField.Product2.Family"
-                                class="slds-col slds-grid slds-has-flexi-truncate  full forcePageBlockItem forcePageBlockItemView"
-                                data-aura-rendered-by="29:760;a"
-                                data-aura-class="forcePageBlockItem forcePageBlockItemView">
-                                <div class="slds-form-element slds-form-element_readonly slds-grow slds-hint-parent override--slds-form-element"
-                                    data-aura-rendered-by="30:760;a">
-                                    <div class="test-id__field-label-container slds-form-element__label"
-                                        data-aura-rendered-by="31:760;a"><span class="test-id__field-label"
-                                            data-aura-rendered-by="32:760;a">Product Family</span></div>
-                                    <div class="slds-form-element__control slds-grid itemBody"
-                                        data-aura-rendered-by="34:760;a"><span
-                                            class="test-id__field-value slds-form-element__static slds-grow  is-read-only"
-                                            data-aura-rendered-by="35:760;a"><span
-                                                data-aura-rendered-by="26:760;a"></span></span><!--render facet: 37:760;a--><!--render facet: 38:760;a-->
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="slds-grid slds-gutters_small full cols-2 forcePageBlockSectionRow"
-                            data-aura-rendered-by="82:760;a" data-aura-class="forcePageBlockSectionRow">
-                            <div data-target-selection-name="sfdc:RecordField.Product2.ProductCode"
-                                class="slds-col slds-grid slds-has-flexi-truncate  full forcePageBlockItem forcePageBlockItemView"
-                                data-aura-rendered-by="50:760;a"
-                                data-aura-class="forcePageBlockItem forcePageBlockItemView">
-                                <div class="slds-form-element slds-form-element_readonly slds-grow slds-hint-parent override--slds-form-element"
-                                    data-aura-rendered-by="51:760;a">
-                                    <div class="test-id__field-label-container slds-form-element__label"
-                                        data-aura-rendered-by="52:760;a"><span class="test-id__field-label"
-                                            data-aura-rendered-by="53:760;a">Product Code</span></div>
-                                    <div class="slds-form-element__control slds-grid itemBody"
-                                        data-aura-rendered-by="55:760;a"><span
-                                            class="test-id__field-value slds-form-element__static slds-grow  is-read-only"
-                                            data-aura-rendered-by="56:760;a"><span data-aura-rendered-by="48:760;a"
-                                                class="uiOutputText"
-                                                data-aura-class="uiOutputText"></span></span><!--render facet: 58:760;a--><!--render facet: 59:760;a-->
-                                    </div>
-                                </div>
-                            </div>
-                            <div data-target-selection-name="sfdc:RecordField.Product2.IsActive"
-                                class="slds-col slds-grid slds-has-flexi-truncate  full forcePageBlockItem forcePageBlockItemView"
-                                data-aura-rendered-by="69:760;a"
-                                data-aura-class="forcePageBlockItem forcePageBlockItemView">
-                                <div class="slds-form-element slds-form-element_readonly slds-grow slds-hint-parent override--slds-form-element"
-                                    data-aura-rendered-by="70:760;a">
-                                    <div class="test-id__field-label-container slds-form-element__label"
-                                        data-aura-rendered-by="71:760;a"><span class="test-id__field-label"
-                                            data-aura-rendered-by="72:760;a">Active</span></div>
-                                    <div class="slds-form-element__control slds-grid itemBody"
-                                        data-aura-rendered-by="74:760;a"><span
-                                            class="test-id__field-value slds-form-element__static slds-grow  is-read-only"
-                                            data-aura-rendered-by="75:760;a"><span data-aura-rendered-by="67:760;a"
-                                                class="uiImage uiOutputCheckbox"
-                                                data-aura-class="uiImage uiOutputCheckbox"><img
-                                                    data-aura-rendered-by="65:760;a" src="/auraFW/resources/aura/s.gif"
-                                                    class=" checked"
-                                                    alt="True"></span></span><!--render facet: 77:760;a--><!--render facet: 78:760;a-->
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+
         </div>
 
         <template for:each={attributeCategories} for:item="attributeCategory" for:index="index">
