got one col two col

--- a/src/modules/example/app/app.html
+++ b/src/modules/example/app/app.html
@@ -1,4 +1,16 @@
 <template>
+    <!-- one column two column -->
+    <div class="slds-grid slds-wrap slds-text-align_center custom-container">
+        <div class="slds-size_1-of-2 slds-max-medium-size_1-of-1">F1</div>
+        <div class="slds-size_1-of-2 slds-max-medium-size_1-of-1">F2</div>
+        <div class="slds-size_1-of-2 slds-max-medium-size_1-of-1">F3</div>
+        <div class="slds-size_1-of-2 slds-max-medium-size_1-of-1">F4</div>
+        <div class="slds-size_1-of-2 slds-max-medium-size_1-of-1">F5</div>
+        <div class="slds-size_1-of-2 slds-max-medium-size_1-of-1">F6</div>
+        <div class="slds-size_1-of-2 slds-max-medium-size_1-of-1">F7</div>
+        <div class="slds-size_1-of-2 slds-max-medium-size_1-of-1">F8</div>
+    </div>
+    <!-- one column two column -->
     <main>
         <h2> detail pane</h2>
         <!-- being detail panel -->
