got correct floats

--- a/src/modules/example/app/app.html
+++ b/src/modules/example/app/app.html
@@ -1,5 +1,217 @@
 <template>
-    <!-- one column two column -->
+    <!-- floating right counter -->
+    <div class="slds-clearfix ">
+            <div class="slds-float_left slds-col slds-size_2-of-12">
+                <div class="slds-form-element">
+                    <div class="slds-form-element__control">
+                        <button class="slds-button slds-button_icon slds-button_icon-small slds-input__button_decrement"
+                            title="Decrement counter">
+                            <svg class="slds-button__icon" aria-hidden="true">
+                                <use xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#ban"></use>
+                            </svg>
+                            <span class="slds-assistive-text">Decrement counter</span>
+                        </button>
+                        <input type="number" id="default4" placeholder="1" class="slds-input slds-input_counter" />
+                        <button class="slds-button slds-button_icon slds-button_icon-small slds-input__button_increment"
+                            title="Increment counter">
+                            <svg class="slds-button__icon" aria-hidden="true">
+                                <use xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#new"></use>
+                            </svg>
+                            <span class="slds-assistive-text">Increment counter</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="slds-float_right">
+                <div class="slds-col slds-size_2-of-12">
+                    <div class="slds-text-title">
+                        List Price
+                    </div>
+                    <div class="slds-text-title_bold">
+                        1000
+                    </div>
+                </div>
+            </div>
+    </div>
+    <!-- floating right counter end -->
+
+    <!-- small counter start -->
+    <div class="slds-grid slds-gutters">
+        <div class="slds-col slds-size_2-of-12">
+            <div class="slds-form-element">
+                <label class="slds-form-element__label slds-m-right_none" for="default3">Counter Label</label>
+                <div class="slds-form-element__control">
+                    <button class="slds-button slds-button_icon slds-button_icon-small slds-input__button_decrement"
+                        title="Decrement counter">
+                        <svg class="slds-button__icon" aria-hidden="true">
+                            <use xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#ban"></use>
+                        </svg>
+                        <span class="slds-assistive-text">Decrement counter</span>
+                    </button>
+                    <input type="number" id="default3" placeholder="1" class="slds-input slds-input_counter" />
+                    <button class="slds-button slds-button_icon slds-button_icon-small slds-input__button_increment"
+                        title="Increment counter">
+                        <svg class="slds-button__icon" aria-hidden="true">
+                            <use xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#new"></use>
+                        </svg>
+                        <span class="slds-assistive-text">Increment counter</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- small counter start -->
+
+    <!-- counter start -->
+    <div class="slds-form-element">
+        <label class="slds-form-element__label slds-m-right_none" for="default1">Counter Label</label>
+        <div class="slds-form-element__control">
+            <button class="slds-button slds-button_icon slds-button_icon-small slds-input__button_decrement"
+                title="Decrement counter">
+                <svg class="slds-button__icon" aria-hidden="true">
+                    <use xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#ban"></use>
+                </svg>
+                <span class="slds-assistive-text">Decrement counter</span>
+            </button>
+            <input type="number" id="default1" placeholder="1" class="slds-input slds-input_counter" />
+            <button class="slds-button slds-button_icon slds-button_icon-small slds-input__button_increment"
+                title="Increment counter">
+                <svg class="slds-button__icon" aria-hidden="true">
+                    <use xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#new"></use>
+                </svg>
+                <span class="slds-assistive-text">Increment counter</span>
+            </button>
+        </div>
+    </div>
+    <!-- counter end -->
+    <!-- counter start -->
+    <div>
+        <div class="slds-clearfix ">
+            <div class="slds-grid slds-gutters">
+                <div class="slds-float_left slds-col slds-size_2-of-12">
+                    <div class="slds-form-element">
+                        <label class="slds-form-element__label slds-m-right_none" for="default2">Counter Label</label>
+                        <div class="slds-form-element__control">
+                            <button
+                                class="slds-button slds-button_icon slds-button_icon-small slds-input__button_decrement"
+                                title="Decrement counter">
+                                <svg class="slds-button__icon" aria-hidden="true">
+                                    <use xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#ban"></use>
+                                </svg>
+                                <span class="slds-assistive-text">Decrement counter</span>
+                            </button>
+                            <input type="number" id="default2" placeholder="1" class="slds-input slds-input_counter" />
+                            <button
+                                class="slds-button slds-button_icon slds-button_icon-small slds-input__button_increment"
+                                title="Increment counter">
+                                <svg class="slds-button__icon" aria-hidden="true">
+                                    <use xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#new"></use>
+                                </svg>
+                                <span class="slds-assistive-text">Increment counter</span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="slds-float_right">
+                    <div class="slds-text-title">
+                        List Price
+                    </div>
+                    <div class="slds-text-title_bold">
+                        1000
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- counter end -->
+    <!-- one column two column start -->
+    <h1>one col two col</h1>
+    <section role="tabpanel" aria-expanded="true" class="tabs__content active uiTab" data-aura-rendered-by="685:0"
+        data-aura-class="uiTab" id="681:0"><!--render facet: 689:0-->
+        <div>
+            <div class="slds-section slds-is-open">
+                <h3 class="slds-section__title"><button class="slds-button slds-section__title-action"
+                        aria-controls="expando-unique-id-44" aria-expanded="true"><svg
+                            class="slds-section__title-action-icon slds-button__icon slds-button__icon_left"
+                            aria-hidden="true">
+                            <use xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#switch"></use>
+                        </svg><span class="slds-truncate" title="Build &amp; Make">Build &amp; Make</span></button>
+                </h3>
+                <div class="slds-section">
+                    <div class="slds-section__content section__content slds-p-top--none">
+                        <div class="slds-section slds-is-open">
+                            <div class="slds-form slds-form_stacked">
+                                <div class="slds-grid slds-wrap slds-gutters_small full cols-2">
+                                    <div
+                                        class="slds-col slds-has-flexi-truncate slds-size_1-of-2 slds-max-medium-size_1-of-1">
+                                        <div
+                                            class="slds-form-element slds-form-element_readonly slds-grow slds-hint-parent override--slds-form-element">
+                                            <div class="slds-form-element__label">Manufacturer</div>
+                                            <div class="slds-form-element__control slds-grid itemBody">Pineapple
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div
+                                        class="slds-col slds-has-flexi-truncate slds-size_1-of-2 slds-max-medium-size_1-of-1">
+                                        <div
+                                            class="slds-form-element slds-form-element_readonly slds-grow slds-hint-parent override--slds-form-element">
+                                            <div class="slds-form-element__label">Country of Origin</div>
+                                            <div class="slds-form-element__control slds-grid itemBody">Chile</div>
+                                        </div>
+                                    </div>
+                                    <div
+                                        class="slds-col slds-grid slds-has-flexi-truncate slds-size_1-of-2 slds-max-medium-size_1-of-1">
+                                        <div
+                                            class="slds-form-element slds-form-element_readonly slds-grow slds-hint-parent override--slds-form-element">
+                                            <div class="slds-form-element__label">Model</div>
+                                            <div class="slds-form-element__control slds-grid itemBody"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="slds-section slds-is-open">
+                <h3 class="slds-section__title"><button class="slds-button slds-section__title-action"
+                        aria-controls="expando-unique-id-44" aria-expanded="true"><svg
+                            class="slds-section__title-action-icon slds-button__icon slds-button__icon_left"
+                            aria-hidden="true">
+                            <use xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#switch"></use>
+                        </svg><span class="slds-truncate" title="Storage &amp; Capacity">Storage &amp;
+                            Capacity</span></button></h3>
+                <div class="slds-section">
+                    <div class="slds-section__content section__content slds-p-top--none">
+                        <div class="slds-section slds-is-open">
+                            <div class="slds-form slds-form_stacked">
+                                <div class="slds-grid slds-wrap slds-gutters_small full cols-2">
+                                    <div
+                                        class="slds-col slds-grid slds-has-flexi-truncate slds-size_1-of-2 slds-max-medium-size_1-of-1">
+                                        <div
+                                            class="slds-form-element slds-form-element_readonly slds-grow slds-hint-parent override--slds-form-element">
+                                            <div class="slds-form-element__label">Internal Storage</div>
+                                            <div class="slds-form-element__control slds-grid itemBody">12</div>
+                                        </div>
+                                    </div>
+                                    <div
+                                        class="slds-col slds-grid slds-has-flexi-truncate slds-size_1-of-2 slds-max-medium-size_1-of-1">
+                                        <div
+                                            class="slds-form-element slds-form-element_readonly slds-grow slds-hint-parent override--slds-form-element">
+                                            <div class="slds-form-element__label">Chip</div>
+                                            <div class="slds-form-element__control slds-grid itemBody">A-15 Bionic
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- one column two column end -->
     <div class="slds-grid slds-wrap slds-text-align_center custom-container">
         <div class="slds-size_1-of-2 slds-max-medium-size_1-of-1">F1</div>
         <div class="slds-size_1-of-2 slds-max-medium-size_1-of-1">F2</div>
